Tooltip fix; Custom scrollbar; RGB adjust;

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -56,3 +56,35 @@ div:focus {
 .MuiSlider-thumb {
   background-color: #5b8da3 !important;
 }
+
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid transparent;
+  background-clip: padding-box;
+  -webkit-border-radius: 8px;
+  background-color: #a8a8a8;
+  transition: 1000ms;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #7a7a7a;
+}
+
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
